feedback text overlapping problem solved

--- a/modules/docs/src/Volo.Docs.Web/Pages/Documents/Shared/Styles/vs.scss
+++ b/modules/docs/src/Volo.Docs.Web/Pages/Documents/Shared/Styles/vs.scss
@@ -406,7 +406,7 @@ body {
             position: relative;
 
             nav {
-                padding-right: 150px;
+                padding-right: 180px;
                 .breadcrumb {
                     margin-bottom: 0;
                     flex-wrap: nowrap;
